midway use lobbyCLient entirely